Fix side-menu overflowing

--- a/solidity/dashboard/src/css/app.less
+++ b/solidity/dashboard/src/css/app.less
@@ -64,6 +64,8 @@ ul {
 #root {
   display: grid;
   grid-template-columns: @side-menu-width 1fr;
+  grid-template-rows: 1fr;
+  grid-auto-rows: auto;
   grid-template-areas:
     "side-bar content"
     "footer content";
